--- a/css/styles.css
+++ b/css/styles.css
@@ -5842,7 +5842,7 @@ textarea.form-control-lg {
   justify-content: center;
   align-items: center;
   height: auto;
-  width: 700px;
+  width: 100%;
   margin-right: -100%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -5852,6 +5852,12 @@ textarea.form-control-lg {
 .carousel-image {
   max-width: 100%;
   max-height: 100%;
+  object-fit: cover;
+}
+
+.carousel-video {
+  max-width: 100%;
+  height: 500px;
   object-fit: cover;
 }
 
@@ -11032,7 +11038,7 @@ section.resume-section .resume-section-content {
 }
 
 @media screen and (max-width: 768px) {
-  .carousel-inner .carousel-item .carousel-indicators {
+  .carousel-inner .carousel-item{
     width: 100%;
   }
 
