--- a/css/styles.css
+++ b/css/styles.css
@@ -134,8 +134,8 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  margin-top: 0;
-  margin-left: -80px;
+  margin-top: -50px;
+  margin-left: -70px;
   margin-bottom: 0;
   font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
