Weather app added to my page. Keys are hided from public use.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5825,7 +5825,7 @@ textarea.form-control-lg {
   object-fit: cover;
 }
 
-.carousel-video {
+.carousel-element {
   max-width: 100%;
   height: auto;
   object-fit: cover;
